fixed background color when keyboard appears on mobile

--- a/src/components/RegisterForm/RegisterForm.scss
+++ b/src/components/RegisterForm/RegisterForm.scss
@@ -3,13 +3,14 @@
 }
 
 .form_register {
+  min-height: 71rem;
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 2rem 3rem 5rem 3rem;
+  padding: 0rem 3rem 5rem 3rem;
   background: rgb(119, 198, 201);
   background-repeat: repeat;
   background-attachment: fixed;
